--- a/userprofile/templates/userprofile/signup.html
+++ b/userprofile/templates/userprofile/signup.html
@@ -1,14 +1,9 @@
-{% extends 'base.html' %}
-{% block content %} 
-<h2>this is signup page</h2>
-
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="signup">
-</form>
+{% extends "base.html" %}
+{% block content %}
+    <h2>this is signup page</h2>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="signup"/>
+    </form>
 {% endblock content %}
-
-
-
-
