add base template elements

--- a/userprofile/templates/base.html
+++ b/userprofile/templates/base.html
@@ -7,23 +7,84 @@
         <meta name="keywords" content="HTML, CSS, JavaScript"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        {% comment %} Materialize css / js {% endcomment %}
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+              rel="stylesheet"/>
+        <link type="text/css"
+              rel="stylesheet"
+              href="{% static 'materialize/css/materialize.min.css' %}"
+              media="screen,projection"/>
+        <script defer type="text/javascript" src="{% static 'materialize/js/materialize.min.js' %}"></script>
+        {% comment %} personal base css / js {% endcomment %}
         <link rel="stylesheet" href="{% static 'base/css/style.css' %}"/>
+        <script defer type="text/javascript" src="{% static 'base/js/script.js' %}"></script>
+        {% block head %}
+        {% endblock head %}
         <title>Pytagora Beta</title>
     </head>
     <body>
-        <h1>pytagora logo</h1>
-        <nav>
-            <li>
-                <a href="{% url 'home' %}">Home</a>
-            </li>
-            <li>
-                <a href="{% url 'signup' %}">Signup</a>
-            </li>
-        </nav>
+        <header>
+            <nav>
+                <div class="nav-wrapper">
+                    <a href="{% url 'home' %}" class="brand-logo">Pytagora</a>
+                    <a href="#" data-target="pytagora-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                    <ul class="hide-on-med-and-down">
+                        <li>
+                            <a href="{% url 'home' %}">Home</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'signup' %}">Signup</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <ul class="sidenav" id="pytagora-sidenav">
+                <li>
+                    <a href="{% url 'home' %}">Home</a>
+                </li>
+                <li>
+                    <a href="{% url 'signup' %}">Signup</a>
+                </li>
+            </ul>
+        </header>
+
+       <main>
         {% block content %}
         {% endblock content %}
-        <footer>
-            © Anton Askling 2022
+       </main>
+
+        <footer class="page-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Footer Content</h5>
+                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5 class="white-text">Links</h5>
+                        <ul>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                            </li>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                            </li>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 3</a>
+                            </li>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                    © 2014 Copyright Text
+                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
