--- a/userprofile/templates/userprofile/components/home_slider.html
+++ b/userprofile/templates/userprofile/components/home_slider.html
@@ -1,40 +1,44 @@
 {% load static %}
 
-<div class="slider z-depth-3">
+<div class="slider">
     <ul class="slides indigo lighten-1 img">
       <li>
           <div class="row">
             <div class="col s12 l12 slider-img-container">
-              <img class="slider-img" src="{% static 'img/calming-view.svg' %}" alt="desk illustration" />
+              <img id="calming-view" class="slider-img" src="{% static 'img/calming-view.svg' %}" alt="desk illustration" />
             </div>
             <div class="caption center-align" >
-              <h3 class="bold amber-text ">Welcome to Pytagora</h3>
-              <h5 class="red-text">The reference check software.</h5>
+              <h3 class="amber-text ">Welcome to Pytagora</h3>
+              <h5 class="text-bold red-text">The reference check software.</h5>
             </div>
           </div>
 
       </li>
 
-      <li class="container">
+      <li class="offset-l6">
+       <div class="container">
         <div class="row">
-          <div class="col s12 l6 push-l6 slider-img-container">
+          <div class="col s12 l8 push-l4 slider-img-container ">
             <img class="slider-img" src="{% static 'img/empty-desk.svg' %}" alt="desk illustration" />
           </div>
           <div class="caption left-align" >
-            <h3>Have you recently quit your job...</h3>
-            <h5 class="light grey-text text-lighten-3">...and now you need to ask your ex-boss to be your reference during your next interview? </h5>
+            <h3>So you recently quit your job...</h3>
+            <h5 class=" inline light grey-text text-lighten-3">...and now you need to ask your <br <br class="hide-on-small-only"/> ex-boss to  be your reference during <br <br class="hide-on-small-only"/> your upcoming interviews? </h5>
           </div>
         </div>
+       </div>
       </li>
 
-      <li class="container ">
-        <div class="row">
-          <div class="col s12 l6 slider-img-container">
-            <img class="slider-img" src="{% static 'img/computer-guy.svg' %}" alt="desk illustration" />
-          </div>
-          <div class="caption right-align" >
-            <h3 class="amber-text text-lighten-2">Use Pytagora instead</h3>
-            <h5 class="black-text text-darken-2">and get your reference on paper with a click of a button</h5>
+      <li class="offset-l6">
+        <div class="container">
+          <div class="row">
+            <div class="col s12 l8 slider-img-container">
+              <img class="slider-img" src="{% static 'img/computer-guy.svg' %}" alt="desk illustration" />
+            </div>
+            <div class="caption right-align" >
+              <h3 class="amber-text text-lighten-2">Use Pytagora instead</h3>
+              <h5 class="inline black-text text-darken-2">and get all your references on paper <br class="hide-on-small-only"/> with  a click of a button</h5>
+            </div>
           </div>
         </div>
       </li>
