--- a/userprofile/templates/userprofile/components/home_slider.html
+++ b/userprofile/templates/userprofile/components/home_slider.html
@@ -8,8 +8,8 @@
               <img id="calming-view" class="slider-img" src="{% static 'img/calming-view.svg' %}" alt="desk illustration" />
             </div>
             <div class="caption center-align" >
-              <h3 class="amber-text ">Welcome to Pytagora</h3>
-              <h5 class="text-bold red-text">The reference check software.</h5>
+              <h3 class="bold white-text">Welcome to Pytagora</h3>
+              <h5 class="inline indigo lighten-1 white-text">The home for your references.</h5>
             </div>
           </div>
 
@@ -22,8 +22,8 @@
             <img class="slider-img" src="{% static 'img/empty-desk.svg' %}" alt="desk illustration" />
           </div>
           <div class="caption left-align" >
-            <h3>So you recently quit your job...</h3>
-            <h5 class=" inline light grey-text text-lighten-3">...and now you need to ask your <br <br class="hide-on-small-only"/> ex-boss to  be your reference during <br <br class="hide-on-small-only"/> your upcoming interviews? </h5>
+            <h3 class="bold white-text">So you recently quit your job...</h3>
+            <h5 class="inline indigo lighten-1 white-text">...and now you need to ask <br <br class="hide-on-small-only"/>your ex-boss to  be your reference  <br <br class="hide-on-small-only"/>during all your upcoming interviews? </h5>
           </div>
         </div>
        </div>
@@ -36,8 +36,8 @@
               <img class="slider-img" src="{% static 'img/computer-guy.svg' %}" alt="desk illustration" />
             </div>
             <div class="caption right-align" >
-              <h3 class="amber-text text-lighten-2">Use Pytagora instead</h3>
-              <h5 class="inline black-text text-darken-2">and get all your references on paper <br class="hide-on-small-only"/> with  a click of a button</h5>
+              <h3 class="bold amber-text text-lighten-4">Use Pytagora instead</h3>
+              <h5 class="inline indigo lighten-1 white-text">and get all your references on paper <br class="hide-on-small-only"/> with  a click of a button.</h5>
             </div>
           </div>
         </div>
