--- a/userprofile/templates/userprofile/components/profile_pending_requests.html
+++ b/userprofile/templates/userprofile/components/profile_pending_requests.html
@@ -1,12 +1,13 @@
 <div class="row">
     <div class="col s12 l10 offset-l1">
         <div class="card-panel indigo">
-            <span class="white-text ">My pending references <i class="material-icons right" >watch_later</i> </span>
+            <span class="white-text ">My pending ref requests <i class="material-icons right" >watch_later</i> </span>
             <hr/>
             <ul class="collapsible popout">
             {% for request in requests %}
         
-                  <li>
+                {% if request.status == PEND %}
+                <li>
                     <div class="collapsible-header"> <span class="truncate">{{ request.company_name }}</span></div>
                     <div class="collapsible-body grey lighten-4">
                         <span>
@@ -18,6 +19,7 @@
                         </span>   
                     </div>
                   </li>
+                  {% endif %}
             {% endfor %}
              </ul>
         </div>
