remove obsolete code from views.py

--- a/userprofile/templates/userprofile/signup.html
+++ b/userprofile/templates/userprofile/signup.html
@@ -6,4 +6,6 @@
         {{ form.as_p }}
         <input type="submit" value="signup"/>
     </form>
+
+<p>already have a profile? <a class="btn" href="">Sign in!</a></p>
 {% endblock content %}
