test: add token to message link, update url. add TestResponseView

--- a/userprofile/templates/userprofile/emails/request_reference_email.html
+++ b/userprofile/templates/userprofile/emails/request_reference_email.html
@@ -3,5 +3,7 @@ Hi {{ name }} needs your help,
 
 Please click on the link below to answer some questions:
 
-http://{{ domain }}{% url 'respond' uidb64=reqid token=token %}
+{{ token }}
+
+http://{{ domain }}{% url 'respond' refid token %}
 {% endautoescape %}
