fix: update testResponseView to find response based on sent request in case many people send requests at the same time

--- a/userprofile/templates/userprofile/emails/request_reference_email.html
+++ b/userprofile/templates/userprofile/emails/request_reference_email.html
@@ -5,5 +5,5 @@ Please click on the link below to answer some questions:
 
 {{ token }}
 
-http://{{ domain }}{% url 'respond' refid token %}
+http://{{ domain }}{% url 'respond' uidb64=refid %} 
 {% endautoescape %}
