--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="container grey lighten-3">
+        <div class="heading-row row">
+            <div class="heading-box col s12">
+                <h2 class="hs right">{ name }'s Profile</h2>
+            </div>
+        </div>
+        <section class="user-name row">
+            <div class="crumbs-box col s6 blue right">
+            
+            </div>
+        </section>
+    </div>
+
     <h2>this is test profile</h2>
     
     <table>
