--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -1,61 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container grey lighten-3">
+    <div class="container center grey lighten-3">
         <div class="heading-row row">
             <div class="heading-box col s12">
                 <h2 class="hs right">{ name }'s Profile</h2>
             </div>
         </div>
         <section class="user-name row">
-            <div class="crumbs-box col s6 blue right">
-            
-            </div>
+            <nav class="crumbs-box col s10 m6 right grey">
+                <div class="nav-wrapper right ">
+                      <a  href="#!" class="breadcrumb ">Profile</a>
+                      <a  href="#!" class="breadcrumb ">Send</a>
+                      <a  href="#!" class="breadcrumb ">References</a>
+                </div>
+            </nav>
         </section>
     </div>
 
-    <h2>this is test profile</h2>
-    
-    <table>
-        <tr>
-            <th>request from</th>
-            <td>to company</td>
-            <td>request sent to</td>
-            <td>status</td>
-        </tr>
-            {% for request in requests %}
-            
-            <tr>
-                <td>{{ request.profile }}</td>
-                <td>{{ request.to_email }}</td>
-                <td>{{ request.company_name }}</td>
-                <td>{{ request.status }}</td>
-            </tr>
 
-            {% empty %}
-            <p>no requests has been made yet</p>
-            {% endfor %}
-    </table>
-
-    <table>
-        <tr>
-            <th>response from</th>
-            <th>company</th>
-            <th>email</th>
-            <th>response to</th>
-        </tr>
-            {% for response in comp_responses %}
-            <tr>
-                <td>{{ response.get_full_name }}</td>
-                <td>{{ response.company_name }}</td>
-                <td>{{ response.email }}</td>
-                <td><a href="{% url 'reference_detail' response.id %}">details</a></td>
-
-            </tr>
-
-            {% empty %}
-            <p>you have not received any responses yet.</p>
-            {% endfor %}
-    </table>
 
 {% endblock content %}
