--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -2,22 +2,27 @@
 
 {% block content %}
     <div class="container center grey lighten-3">
-        <div class="heading-row row">
-            <div class="heading-box col s12">
-                <h2 class="hs right">{ name }'s Profile</h2>
-            </div>
-        </div>
-        <section class="user-name row">
-            <nav class="crumbs-box col s10 m6 right grey">
-                <div class="nav-wrapper right ">
-                      <a  href="#!" class="breadcrumb ">Profile</a>
-                      <a  href="#!" class="breadcrumb ">Send</a>
-                      <a  href="#!" class="breadcrumb ">References</a>
+        <section class="profile-section">
+            <div class="heading-row row">
+                <div class="heading-box col s12">
+                    <h2 class="hs right">{ name }'s Profile</h2>
                 </div>
-            </nav>
+            </div>
+            <div class="crumbs-row row">
+                <nav class="crumbs-box col s10 m6 right grey">
+                    <div class="nav-wrapper right ">
+                          <a  href="#!" class="breadcrumb ">Profile</a>
+                          <a  href="#!" class="breadcrumb ">Send</a>
+                          <a  href="#!" class="breadcrumb ">References</a>
+                    </div>
+                </nav>
+            </div>
+            <div class="row">
+                <div class="col s12 profilesque-image grey darken-4">
+                    <button class="btn" id="req-reference">Ask For Reference</button>
+                </div>
+            </div>
         </section>
     </div>
-
-
 
 {% endblock content %}
