--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -5,7 +5,7 @@
         <section class="profile-section">
             <div class="heading-row row">
                 <div class="heading-box col s12">
-                    <h2 class="hs right">{ name }'s Profile</h2>
+                    <h2 class="hm right">{ name }'s Profile</h2>
                 </div>
             </div>
             <div class="crumbs-row row">
@@ -17,9 +17,29 @@
                     </div>
                 </nav>
             </div>
-            <div class="row">
+            <div class="req-reference-row row">
                 <div class="col s12 profilesque-image grey darken-4">
                     <button class="btn" id="req-reference">Ask For Reference</button>
+                </div>
+            </div>
+            <div class="counter-row row">
+                <div class="col s6 counter-box">
+                    <div class="card right-align">
+                        <div class="card-content">
+                            <span class="hs card-title"> Requests </span>
+                            <span class="xl3">{count}</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" col s6 counter-box">
+                        <div class="card right-align">
+                            <div class="card-content">
+                                <span class="hs card-title"> References </span>
+                                <span class="xl3">{count}</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
