--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -22,9 +22,9 @@
                     <button class="btn" id="req-reference">Ask For Reference</button>
                 </div>
             </div>
-            <div class="counter-row row">
+            <div class="counter-row row row-margin-delete">
                 <div class="col s6 counter-box">
-                    <div class="card right-align">
+                    <div class="card right-align rounded">
                         <div class="card-content">
                             <span class="hs card-title"> Requests </span>
                             <span class="xl3">{count}</span>
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class=" col s6 counter-box">
-                    <div class="card right-align">
+                    <div class="card right-align rounded">
                         <div class="card-content">
                             <span class="hs card-title"> References </span>
                             <span class="xl3">{count}</span>
@@ -41,6 +41,46 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="row ">
+            <div class="col s12">
+                <div class="card-panel rounded left-align">
+                    <h3 class="hsx">Pending Requests <i class="material-icons tiny right">clock</i></h3>
+                    
+
+                    <div class="collection ">
+                        <a class=" collection-item " href="">
+                            <div class="row valign-wrapper">
+                                <div class="col s9 content truncate">
+                                    <p class="truncate blue-text">
+                                        Request to: Company AB<br />
+                                        Email recipient: person@company.com<br />
+                                        date sent: Mon, 4 3032 <br />  
+                                    </p>
+                                </div>
+                                <div class="col s3">
+                                    <i class="right material-icons blue-text">delete</i>
+                                </div>  
+                            </div>
+                        </a>
+                        <a class=" collection-item " href="">
+                            <div class="row valign-wrapper">
+                                <div class="col s9 content truncate">
+                                    <p class="truncate blue-text">
+                                        Request to: Company AB<br />
+                                        Email recipient: person@company.com<br />
+                                        date sent: Mon, 4 3032 <br />  
+                                    </p>
+                                </div>
+                                <div class="col s3">
+                                    <i class="right material-icons blue-text">delete</i>
+                                </div>  
+                            </div>
+                        </a>
+                    </div>
+                    
+                </div>
+            </div>            
         </section>
     </div>
 
