reference response card

--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -42,11 +42,11 @@
                 </div>
             </div>
         </section>
-        <section class="row ">
-            <div class="col s12">
-                <div class="card-panel rounded left-align">
-                    <h3 class="hsx">Pending Requests <i class="material-icons tiny right">clock</i></h3>
-                    
+        <section class="grey rounded">
+            <div class="row">
+                <div class="col s12 card-panel rounded left-align">
+                    <h3 class="hs">Pending Requests <i class="material-icons small right">access_time</i></h3>
+                    <hr/>
 
                     <div class="collection ">
                         <a class=" collection-item " href="">
@@ -78,9 +78,24 @@
                             </div>
                         </a>
                     </div>
-                    
+            </div>
+            </div>
+            
+            <div class="row">
+                <div class="col s12 card-panel rounded left-align">
+                    <h3 class="hs">My References <i class="material-icons small right">access_time</i></h3>
+                    <hr/>
+                    <div class="collection">
+                        <a class="row collection-item reference-collection" href="">
+                                <div class="col s4">hejsan </div>
+                                <div class="col s4">svejsan</div>
+                                <div class="col s4">dejsan</div>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
-            </div>            
+            </div>
         </section>
     </div>
 
