--- a/staticfiles/base/css/style.css
+++ b/staticfiles/base/css/style.css
@@ -56,7 +56,7 @@ header{
     font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
-    font-size: 3vw;
+    font-size: 2vw;
     margin: 0 14px 0 8px;
     -webkit-font-smoothing: antialiased;
 }
@@ -132,8 +132,13 @@ header{
 .collection a.collection-item:hover{
     color: darkblue;
     background-color: #dde1ff !important;
+    overflow: hidden !important;
 }
 
+.reference-collection{
+   margin-left: 0rem !important;
+    margin-right: 0rem !important; 
+}
 
 
 @media only screen and (max-width: 601px) {
